apps/base/samba/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  namespace: app-samba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba
  securityContext:
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
    fsGroupChangePolicy: "OnRootMismatch"
  template:
    metadata:
      labels:
        app: samba
    spec:
      containers:
        - name: samba
          image: dperson/samba@sha256:66088b78a19810dd1457a8f39340e95e663c728083efa5fe7dc0d40b2478e869
          imagePullPolicy: IfNotPresent
          args:
            - "-u"
            - "$(SAMBA_USERNAME);$(SAMBA_PASSWORD);1000"
            - "-s"
            - "movies;/mnt/movies;yes;no;no;$(SAMBA_USERNAME)"
            - "-s"
            - "series;/mnt/series;yes;no;no;$(SAMBA_USERNAME)"
            - "-s"
            - "youtube;/mnt/youtube;yes;no;no;$(SAMBA_USERNAME)"
            - "-s"
            - "music;/mnt/music;yes;no;no;$(SAMBA_USERNAME)"
            - "-s"
            - "downloads;/mnt/downloads;yes;no;no;$(SAMBA_USERNAME)"
            - "-s"
            - "photoprism-originals;/mnt/photoprism-originals;yes;yes;yes"
            - "-p"
            - "-r"
          ports:
            - containerPort: 445
              name: samba-tcp-445
          volumeMounts:
            - mountPath: /mnt/movies
              name: movies
            - mountPath: /mnt/series
              name: series
            - mountPath: /mnt/youtube
              name: youtube
            - mountPath: /mnt/music
              name: music
            - mountPath: /mnt/downloads
              name: downloads
            - mountPath: /mnt/photoprism-originals
              name: photoprism-originals
      volumes:
        - name: movies
          hostPath:
            path: /mnt/spike/mass-storage/videos/movies
            type: Directory
        - name: series
          hostPath:
            path: /mnt/spike/mass-storage/videos/series
            type: Directory
        - name: youtube
          hostPath:
            path: /mnt/spike/mass-storage/videos/youtube
            type: Directory
        - name: music
          hostPath:
            path: /mnt/spike/mass-storage/music
            type: Directory
        - name: downloads
          hostPath:
            path: /mnt/spike/storage/Downloads
            type: Directory
        - name: photoprism-originals
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-photoprism/originals
            type: Directory
