apps/base/samba/samba.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  namespace: app-samba
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: samba
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: samba
    spec:
      nodeSelector:
        kubernetes.io/hostname: cadance
      containers:
        - name: samba
          image: dperson/samba@sha256:66088b78a19810dd1457a8f39340e95e663c728083efa5fe7dc0d40b2478e869
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 445
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 445
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          args:
            - "-s"
            - "movies;/mnt/movies;yes;yes;yes"
            - "-s"
            - "series;/mnt/series;yes;yes;yes"
            - "-s"
            - "youtube;/mnt/youtube;yes;yes;yes"
            - "-s"
            - "music;/mnt/music;yes;yes;yes"
            - "-s"
            - "downloads;/mnt/downloads;yes;no;yes"
            - "-s"
            - "photos;/mnt/photoprism-originals;yes;yes;yes"
            - "-p"
            - "-r"
          ports:
            - containerPort: 445
              name: smb
          volumeMounts:
            - mountPath: /mnt/movies
              name: movies
            - mountPath: /mnt/series
              name: series
            - mountPath: /mnt/youtube
              name: youtube
            - mountPath: /mnt/music
              name: music
            - mountPath: /mnt/downloads
              name: downloads
            - mountPath: /mnt/photoprism-originals
              name: photoprism-originals
      volumes:
        - name: movies
          hostPath:
            path: /mnt/spike/mass-storage/videos/movies
            type: Directory
        - name: series
          hostPath:
            path: /mnt/spike/mass-storage/videos/series
            type: Directory
        - name: youtube
          hostPath:
            path: /mnt/spike/mass-storage/videos/youtube
            type: Directory
        - name: music
          hostPath:
            path: /mnt/spike/mass-storage/music
            type: Directory
        - name: downloads
          hostPath:
            path: /mnt/spike/storage/Downloads
            type: Directory
        - name: photoprism-originals
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-photoprism/originals
            type: Directory
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: home.arpa/zfs-pool
                    operator: In
                    values:
                      - "true"
---
apiVersion: v1
kind: Service
metadata:
  name: samba
  namespace: app-samba

spec:
  ports:
    - name: smb
      port: 445
      targetPort: smb
  selector:
    app: samba
