apps/base/samba/ingressroute.yaml
apiVersion: v1
kind: Service
metadata:
  name: samba
  namespace: app-samba

spec:
  ports:
    - name: tcp
      port: 445
  selector:
    app: samba
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: samba
  namespace: app-samba

spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`)
      services:
        - name: samba
          port: 445
